--- a/.github/DISCUSSION_TEMPLATE/feedback.yml
+++ b/.github/DISCUSSION_TEMPLATE/feedback.yml
@@ -1,5 +1,5 @@
-title: "[General]"
-labels: ["General Introduction"]
+title: "[Feedback]"
+labels: ["Feedback Form"]
 body:
   - type: markdown
     attributes:
@@ -48,8 +48,3 @@ body:
         - label: This one!
           required: true
         - label: I won't stop you if you check this one, too
-  - type: markdown
-    attributes:
-      value: |
-        ### The thrilling conclusion
-        _to our template_
